--- a/codes/CMakeLists.txt
+++ b/codes/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.6)
-project(eigen_test)
+project(codes)
 
-include_directories("/usr/include/eigen3")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp)
-add_executable(eigen_test ${SOURCE_FILES})
+set(SOURCE_FILES
+    CMakeLists.txt
+    main.cpp)
+
+include_directories("/usr/include/eigen3")
+
+add_executable(codes ${SOURCE_FILES})
