Update CMake file for building. Rename files to conform to CMake

--- a/codes/CMakeLists.txt
+++ b/codes/CMakeLists.txt
@@ -1,12 +1,16 @@
-cmake_minimum_required(VERSION 3.6)
-project(codes)
+cmake_minimum_required(VERSION 2.8)
+project(cppcodetest)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES
-    CMakeLists.txt
-    main.cpp)
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 
 include_directories("/usr/include/eigen3")
 
-add_executable(codes ${SOURCE_FILES})
+set(SOURCE_FILES
+    Main.cpp
+    MatrixDecomposition.hpp
+    Solvers.hpp
+    Main.cpp)
+
+add_executable(cppcodetest ${SOURCE_FILES})
