--- a/codes/CMakeLists.txt
+++ b/codes/CMakeLists.txt
@@ -12,6 +12,6 @@ set(SOURCE_FILES
     Main.cpp
     MatrixDecomposition.hpp
     Solvers.hpp
-    Main.cpp IterativeMethods.hpp)
+    Main.cpp IterativeMethods.hpp StoppingCriterionSolvers.hpp)
 
 add_executable(cppcodetest ${SOURCE_FILES})
