First part of moving RNG methods into classes to make it easy to use

--- a/codes/CMakeLists.txt
+++ b/codes/CMakeLists.txt
@@ -14,6 +14,7 @@ set(SOURCE_FILES
     Main.cpp
     MatrixDecomposition.hpp
     Solvers.hpp
-    Main.cpp IterativeMethods.hpp StoppingCriterionSolvers.hpp Examples.hpp PDESolverFunctions.hpp OptionPricers.hpp BlackScholes.hpp)
+    Main.cpp IterativeMethods.hpp StoppingCriterionSolvers.hpp Examples.hpp PDESolverFunctions.hpp OptionPricers.hpp BlackScholes.hpp
+        MonteCarlo.hpp RandomNumberGenerator.hpp)
 
 add_executable(cppcodetest ${SOURCE_FILES})
