Rename uFunctions. add setup call to seta and setb

--- a/codes/CMakeLists.txt
+++ b/codes/CMakeLists.txt
@@ -15,7 +15,8 @@ set(SOURCE_FILES
     MatrixDecomposition.hpp
     Solvers.hpp
     IterativeMethods.hpp StoppingCriterionSolvers.hpp Examples.hpp OptionPricers.hpp BlackScholes.hpp
-        MonteCarlo.hpp RandomNumberGenerator.hpp PDESolver.hpp PDEMesh.hpp EuropeanPDESolver.hpp AmericanPDESolver.hpp BarrierPDE.hpp BinomialTrees.hpp BarrierOption.hpp)
+        MonteCarlo.hpp RandomNumberGenerator.hpp PDESolver.hpp PDEMesh.hpp EuropeanPDESolver.hpp AmericanPDESolver.hpp BarrierPDE.hpp BinomialTrees.hpp BarrierOption.hpp
+        uFunctions.hpp)
 
 add_executable(cppcodetest ${SOURCE_FILES})
 
