--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: cpp 
 script: ./travis.sh
 compiler: gcc
+addons:
+    apt:
+        packages:
+            - libeigen3-dev
+            - libboost-all-dev
