Update travis to try gcc6

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: cpp 
 script: ./travis.sh
 compiler: gcc
-sudo: required
-dist: trusty
+#sudo: required
+#dist: trusty
 addons:
     apt:
         packages:
             - libeigen3-dev
             - libboost-all-dev
+            - gcc-6
